[package]
name = "espikey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
itertools = "0.13.0"
log = "0.4.21"
prost = "0.12.6"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
zerocopy = { version = "0.7.34", features = ["derive"] }
thiserror = "1.0.61"

[build-dependencies]
tonic-build = "0.11.0"
